--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,3 +1,8 @@
-h2 {
-    color: blue;
+.appWrapper {
+    background-color: rgb(29,161,242);
+    color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70vh;
 }
